@@ -1,3 +1,5 @@
+[21:2.1.1]
+- Fixed crash with haptic feedback on d-pad diagonal
 [20:2.1.0]
 - Fixed stretch-screen bug in gles2rice video plugin (fixes Mario Kart multiplayer, Zelda blue action icon, and many others)
 - Added screen position option for portrait mode
